# chaoschain-integrations

./: .env.template  .gitignore  ACCOUNTABILITY_ROADMAP.md  Makefile  NEXT_STEPS.md  PROVIDER_INTEGRATION_VISUAL_SUMMARY.txt  QUICK_START_EIGENAI.sh  README.md  RUN_TESTS.sh  conftest.py  deploy_deterministic.sh  deploy_eigenai_only.sh  deploy_eigencompute.sh  env.template  genesis_studio.py  pyproject.toml  setup_env_secure.sh  test_compute_providers.py  test_deployment.py  test_eigen_live.py  test_eigenai_process_integrity.py  test_eigencompute_deployed.py  test_genesis_with_facilitator.py  test_layer2_eigencompute_real.py  test_loan_approval_local.py  test_loan_workflow.py
agents/: server_agent_sdk.py  validator_agent_sdk.py
chaoschain_integrations/: __init__.py  py.typed
chaoschain_integrations/attest/: __init__.py  base.py
chaoschain_integrations/attest/chainlink_cre/: client.py
chaoschain_integrations/attest/chainlink_cre/tests/: __init__.py
chaoschain_integrations/attest/tests/: __init__.py
chaoschain_integrations/common/: __init__.py  config.py  errors.py  healthcheck.py  logging.py  types.py  version.py
chaoschain_integrations/compute/: __init__.py  base.py
chaoschain_integrations/compute/eigen/: README.md  __init__.py  adapter.py  client.py  schemas.py
chaoschain_integrations/compute/eigen/tests/: __init__.py  test_eigen_adapter.py
chaoschain_integrations/compute/tests/: __init__.py  test_contract_compute.py
chaoschain_integrations/compute/zerog/: README.md  __init__.py  adapter.py  client.py  schemas.py
chaoschain_integrations/compute/zerog/tests/: __init__.py  test_zerog_adapter.py
chaoschain_integrations/storage/: __init__.py  base.py
chaoschain_integrations/storage/ipfs_pinata/: README.md  __init__.py  adapter.py  client.py  schemas.py
chaoschain_integrations/storage/ipfs_pinata/tests/: __init__.py  test_pinata_adapter.py
chaoschain_integrations/storage/tests/: __init__.py  test_contract_storage.py
chaoschain_integrations/storage/zerog/: README.md  __init__.py  adapter.py  client.py  schemas.py
chaoschain_integrations/storage/zerog/tests/: __init__.py  test_zerog_adapter.py
docker/alice-shopping-agent/: Dockerfile  Dockerfile.minimal  Dockerfile.nuclear  alice_agent.py  entrypoint.sh  requirements.txt  start.sh  start_simple.py
docker/genesis-agents/: Dockerfile  genesis_agents.py  genesis_agents_auth.py  requirements.txt
examples/: eigencompute_integration.py
examples/providers/template/: README.md  compute_provider_template.py  storage_provider_template.py
sidecars/chainlink_cre/go/: README.md
sidecars/eigen/go/: Makefile  README.md  go.mod
sidecars/eigen/go/cmd/compute-bridge/: main.go
sidecars/eigen/proto/: eigen_compute.proto
sidecars/zerog/go/: Makefile  README.md  go.mod
sidecars/zerog/go/cmd/compute-bridge/: main.go
sidecars/zerog/go/cmd/storage-bridge/: main.go
sidecars/zerog/proto/: zerog_compute.proto  zerog_storage.proto
